docs/apache-airflow-providers-google/10.25.0/_sources/_api/tests/system/google/cloud/dataproc/example_dataproc_flink/index.rst.txt
:py:mod:`tests.system.google.cloud.dataproc.example_dataproc_flink`
===================================================================

.. py:module:: tests.system.google.cloud.dataproc.example_dataproc_flink

.. autoapi-nested-parse::

   Example Airflow DAG for DataprocSubmitJobOperator with hadoop job.



Module Contents
---------------

.. py:data:: ENV_ID

   

.. py:data:: DAG_ID
   :value: 'dataproc_flink'

   

.. py:data:: PROJECT_ID

   

.. py:data:: BUCKET_NAME

   

.. py:data:: CLUSTER_NAME_BASE

   

.. py:data:: CLUSTER_NAME_FULL

   

.. py:data:: CLUSTER_NAME

   

.. py:data:: REGION
   :value: 'europe-west1'

   

.. py:data:: OUTPUT_FOLDER
   :value: 'wordcount'

   

.. py:data:: OUTPUT_PATH

   

.. py:data:: CLUSTER_CONFIG

   

.. py:data:: FLINK_JOB

   

.. py:data:: create_bucket

   

.. py:data:: test_run

   

