docs/apache-airflow-providers-google/14.1.0/_sources/_api/tests/system/google/cloud/dataproc/example_dataproc_flink/index.rst.txt
tests.system.google.cloud.dataproc.example_dataproc_flink
=========================================================

.. py:module:: tests.system.google.cloud.dataproc.example_dataproc_flink

.. autoapi-nested-parse::

   Example Airflow DAG for DataprocSubmitJobOperator with hadoop job.



Attributes
----------

.. autoapisummary::

   tests.system.google.cloud.dataproc.example_dataproc_flink.ENV_ID
   tests.system.google.cloud.dataproc.example_dataproc_flink.DAG_ID
   tests.system.google.cloud.dataproc.example_dataproc_flink.PROJECT_ID
   tests.system.google.cloud.dataproc.example_dataproc_flink.BUCKET_NAME
   tests.system.google.cloud.dataproc.example_dataproc_flink.CLUSTER_NAME_BASE
   tests.system.google.cloud.dataproc.example_dataproc_flink.CLUSTER_NAME_FULL
   tests.system.google.cloud.dataproc.example_dataproc_flink.CLUSTER_NAME
   tests.system.google.cloud.dataproc.example_dataproc_flink.REGION
   tests.system.google.cloud.dataproc.example_dataproc_flink.OUTPUT_FOLDER
   tests.system.google.cloud.dataproc.example_dataproc_flink.OUTPUT_PATH
   tests.system.google.cloud.dataproc.example_dataproc_flink.CLUSTER_CONFIG
   tests.system.google.cloud.dataproc.example_dataproc_flink.FLINK_JOB
   tests.system.google.cloud.dataproc.example_dataproc_flink.create_bucket
   tests.system.google.cloud.dataproc.example_dataproc_flink.test_run


Module Contents
---------------

.. py:data:: ENV_ID

.. py:data:: DAG_ID
   :value: 'dataproc_flink'


.. py:data:: PROJECT_ID

.. py:data:: BUCKET_NAME
   :value: 'bucket_dataproc_flink_Uninferable'


.. py:data:: CLUSTER_NAME_BASE
   :value: ''


.. py:data:: CLUSTER_NAME_FULL
   :value: ''


.. py:data:: CLUSTER_NAME
   :value: ''


.. py:data:: REGION
   :value: 'europe-west1'


.. py:data:: OUTPUT_FOLDER
   :value: 'wordcount'


.. py:data:: OUTPUT_PATH
   :value: 'gs://bucket_dataproc_flink_Uninferable/wordcount/'


.. py:data:: CLUSTER_CONFIG

.. py:data:: FLINK_JOB

.. py:data:: create_bucket

.. py:data:: test_run

